<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/textView"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_spotify_streamer"
            android:id="@+id/bSpotifyLauncher"
            android:background="#FF9C38"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:onClick="launcherSpotify"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_popular_movies"
            android:id="@+id/bPopularMovieLauncher"
            android:background="#FF9C38"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:onClick="launcherPopularMovies"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_scores_app"
            android:id="@+id/bScoreLauncher"
            android:background="#FF9C38"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:onClick="launcherScoresApp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_library_app"
            android:id="@+id/bLibraryLauncher"
            android:background="#FF9C38"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:onClick="launcherLibraryApp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_build_it_bigger"
            android:id="@+id/bBuildItBiggerLauncher"
            android:background="#FF9C38"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:onClick="launcherBuildItBigger"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_xyz_reader"
            android:id="@+id/bXYZReaderLauncher"
            android:background="#FF9C38"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:onClick="launcherXYZReader"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_capstone_my_own_app"
            android:id="@+id/bCapstoneLauncher"
            android:background="#EB004A"
            android:padding="10dp"
            android:textStyle="bold"
            android:onClick="launcherCapstoneMyOwnApp"/>


    </LinearLayout>


</RelativeLayout>
