<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioSortByGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioSortByMostPop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sort_by_most_pop"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioSortByHighestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sort_by_highest_rate" />

            <RadioButton
                android:id="@+id/radioSortByFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sort_by_favorite_movies" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/bSaveSettings"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
