<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="p01.popular.movie.PopularMovieActivityDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvMovieDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:padding="@dimen/movie_detail_title_padding"
            android:textColor="@android:color/white"
            android:textSize="@dimen/movie_detail_title_textsize" />

        <RelativeLayout
            android:id="@+id/mainLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMovieDetailsTitle"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/movie_detail_general_margin">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/movie_detail_max_poster_size"
                android:maxWidth="@dimen/movie_detail_max_poster_size"
                android:scaleType="fitCenter"
                android:src="@drawable/test01" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/movie_detail_general_margin"
                android:layout_marginStart="@dimen/movie_detail_general_margin"
                android:layout_toRightOf="@id/ivPoster"
                android:layout_toEndOf="@id/ivPoster"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvMovieDetailYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/movie_detail_info_offset"
                    android:textSize="@dimen/movie_detail_info_year_textsize" />

                <TextView
                    android:id="@+id/tvMovieDetailLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/movie_detail_info_offset"
                    android:textSize="@dimen/movie_detail_info_length_textsize" />

                <TextView
                    android:id="@+id/tvMovieDetailRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/movie_detail_info_rating_textsize" />

                <Button
                    android:id="@+id/bMovieMarkAsFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/movie_detail_mark_as_favorite" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tvMovieDetailsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainLayout"
            android:layout_marginLeft="@dimen/movie_detail_general_margin"
            android:layout_marginTop="10dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/divider1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvMovieDetailsDescription"
            android:layout_margin="@dimen/movie_detail_general_margin"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textViewTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/divider1"
            android:layout_alignStart="@+id/divider1"
            android:layout_below="@+id/divider1"
            android:text="Trailers:"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/trailer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewTrailer"
            android:layout_alignStart="@+id/textViewTrailer"
            android:layout_below="@+id/textViewTrailer"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/movie_detail_trailer_play_button_dimen"
                android:layout_height="@dimen/movie_detail_trailer_play_button_dimen"
                android:layout_margin="@dimen/movie_detail_info_offset"
                android:src="@drawable/trailer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/movie_detail_trailer_text_margin"
                android:text="@string/movie_detail_trailer_default_text_1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/trailer1"
            android:layout_margin="@dimen/movie_detail_general_margin"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/trailer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewTrailer"
            android:layout_alignStart="@+id/textViewTrailer"
            android:layout_below="@+id/divider2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/movie_detail_trailer_play_button_dimen"
                android:layout_height="@dimen/movie_detail_trailer_play_button_dimen"
                android:layout_margin="@dimen/movie_detail_info_offset"
                android:src="@drawable/trailer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/movie_detail_trailer_text_margin"
                android:text="@string/movie_detail_trailer_default_text_2"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>